# Serp

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.keycloak.yml  docker-compose.prod.yml
serp_llm/: .dockerignore  .env.example  .gitignore  Dockerfile  NEXT_STEPS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run-dev.sh
serp_llm/alembic/: env.py  script.py.mako
serp_llm/alembic/versions/: 20251106_1231_07684dff26b7_initial_schema.py
serp_llm/scripts/: seed_data.py
serp_llm/src/: main.py
serp_llm/src/api/middleware/: __init__.py  logging_middleware.py
serp_llm/src/api/routes/: __init__.py  health.py
serp_llm/src/config/: __init__.py  settings.py
serp_llm/src/core/domain/: __init__.py  enums.py  exceptions.py
serp_llm/src/core/domain/dto/: __init__.py  chat_dto.py  response_dto.py
serp_llm/src/core/domain/entities/: __init__.py  ai_capability_entity.py  ai_module_entity.py  base_entity.py  message_entity.py  (+3 more)
serp_llm/src/core/mapper/: __init__.py  ai_capability_mapper.py  ai_module_mapper.py  conversation_mapper.py  document_chunk_mapper.py  embeddings_job_mapper.py  message_mapper.py
serp_llm/src/core/service/: __init__.py  ai_capability_service.py  ai_module_service.py  conversation_service.py  message_service.py
serp_llm/src/core/usecase/: __init__.py  chat_usecase.py
serp_llm/src/infrastructure/cache/: __init__.py  redis_cache.py
serp_llm/src/infrastructure/db/: __init__.py  base.py  database.py
serp_llm/src/infrastructure/llm/: __init__.py  openai_client.py
serp_llm/src/kernel/: __init__.py
serp_llm/src/kernel/utils/: __init__.py  auth_utils.py  jwt_utils.py  response_utils.py
serp_llm/src/ui/: __init__.py
serp_llm/src/ui/api/: __init__.py
serp_llm/src/ui/middleware/: __init__.py  exception_handlers.py  jwt_middleware.py  logging_middleware.py
(+2605 files in other folders)
